Bug 1341995 - Make ULPFEC and RED payload types configurable in VideoCodecConfig; r=jesup

MozReview-Commit-ID: 74ncVSIYWzS